data/derived/comb/progs/unify/prog7791.ml.out
Characters 51-52:
  fixpoint f f(b)
             ^
Error: This expression has type
         (('a -> 'b -> 'c) -> 'a -> 'b -> 'c) * ('a -> 'b -> 'c)
       but an expression was expected of type 'a
       The type variable 'a occurs inside
       (('a -> 'b -> 'c) -> 'a -> 'b -> 'c) * ('a -> 'b -> 'c)
